# gmapR

./: .Rbuildignore  .gitignore  DESCRIPTION  NAMESPACE  NEWS  TODO  doupdate.R  installGmapR.R
R/: BamTallyParam-class.R  GmapBamReader-class.R  GmapGenome-class.R  GmapGenomeDirectory-class.R  GmapOutput-class.R  GmapParam-class.R  GmapSnpDirectory-class.R  GmapSnps-class.R  GsnapOutput-class.R  GsnapParam-class.R  TP53Genome.R  asSystemCall.R  atoiindex-command.R  atoiindex.R  bam_tally-command.R  buildGmap.R  buildGmapDb.R  buildGmapDbSNPIndex.R  buildGmapGenomeIndex.R  buildGmapIITFromFasta.R  buildGmapIndex.R  buildGmapSpliceSites.R  buildGsnapSNPIIT.R  buildRefseqSlicesites.R  buildRefseqSpliceSites.R  cmetindex-command.R  consolidateBAMFiles.R  consolidateGmapFiles.R  consolidateGsnapFiles.R  consolidateSAMFiles.R  exonsToGmapSpliceSites.R  get-genome-command.R  getChrGRangesFromGmap.R  getGsnapFileCounts.R  globals.R  gmap-command.R  gmap_build-command.R  gsnap-command.R  gsnap.R  iit-format.R  (+12 more)
data/: createP53GmapGenome.R
inst/: configureGmapR.R  gmapR_globals-default.dcf  installGmapR.R
inst/GmapGenomePackage-template/: DESCRIPTION  NAMESPACE
inst/GmapGenomePackage-template/R/: zzz.R
inst/GmapGenomePackage-template/man/: package.Rd
inst/extdata/: bam_tally_test.bam  bam_tally_test.bam.bai  hg19.MT.fasta  hg19.p53.fasta  p53Variants.vcf
inst/extdata/test_data_aln/: test_data_aln.concordant_mult.bam  test_data_aln.concordant_mult.bam.bai  test_data_aln.concordant_uniq.bam  test_data_aln.concordant_uniq.bam.bai  test_data_aln.halfmapping_mult.bam  test_data_aln.halfmapping_mult.bam.bai  test_data_aln.halfmapping_uniq.bam  test_data_aln.halfmapping_uniq.bam.bai  test_data_aln.nomapping.bam  test_data_aln.nomapping.bam.bai  test_data_aln.paired_mult.bam  test_data_aln.unpaired_uniq.bam  test_data_aln.unpaired_uniq.bam.bai
inst/scripts/: parse_dbsnp.pl
inst/unitTests/: off_test_GmapSnpDirectory.R  off_test_bam_tally.R  test_BamTallyParam.R  test_GmapGenome.R  test_GmapGenomeDirectory.R  test_GsnapParam.R  test_bam_tally.R  test_exonsToGmapSpliceSites.R  test_gsnap.R  test_makeGmapGenomePackage.R
man/: BamTallyParam-class.Rd  GmapDb.Rd  GmapGenome-class.Rd  GmapGenomeDirectory-class.Rd  GmapSnpDirectory-class.Rd  GmapSnps-class.Rd  GsnapOutput-class.Rd  GsnapParam-class.Rd  GsnapParam.Rd  TP53Genome.Rd  as.list.Rd  atoiindex.Rd  bam_tally-methods.Rd  buildGmapDb.Rd  buildGmapDbSNPIndex.Rd  buildGmapIITFromFasta.Rd  buildGmapIndex.Rd  buildGmapSpliceSites.Rd  buildGsnapSNPIIT.Rd  buildRefseqSpliceSites.Rd  cmetindex.Rd  commandLine.Rd  consolidateBAMFiles.Rd  consolidateGmapFiles.Rd  consolidateGsnapFiles.Rd  consolidateSAMFiles.Rd  directory.Rd  exonsToGmapSpliceSites.Rd  getGsnapFileCounts.Rd  gmapMake.Rd  gmapR-package.Rd  gmap_build-methods.Rd  gsnap-methods.Rd  gsnap.Rd  gsnapBuildRefseqSplicesites.Rd  installGmap.Rd  internals.Rd  makeGmapGenomePackage.Rd  name.Rd  parallelized_gsnap.Rd
papers/appnote/: gmapR.Rnw
scripts/: getGmapGstructSourceCode.R
src/: Makefile  R_init_gmapR.c  bamreader.c  bamtally.c  bytestream.h  genome.c  genome.h  gmapR.h  iit.c  iit.h  variantsummary.c
src/gmap/: Makefile.in  README  aclocal.m4  configure  configure.ac
src/gmap/config/: acx_mmap_fixed.m4  acx_mmap_variable.m4
src/gmap/src/: Makefile.am  Makefile.in  access.c  bitpack64-access.c  bitpack64-read.c  bitpack64-write.c  boyer-moore.c  cellpool.c  cellpool.h  compress.c  config.h.in  diag.c  dynprog.c  genome.c  genome_sites.c  gmap.c  gregion.c  gsnap.c  iit-write.c  iit_store.c  indel.c  indel.h  indexdb-write.c  indexdb.c  interval.c  interval.h  intlist.c  intlist.h  list.c  list.h  mem.c  mem.h  oligoindex.c  oligoindex_hr.c  oligoindex_hr.h  outbuffer.c  outbuffer.h  pair.c  pair.h  resulthr.c  (+28 more)
src/gmap/tests/: Makefile.in
src/gmap/util/: Makefile.in  gmap_build.pl.in
src/gstruct/: AUTHORS  Makefile.am  Makefile.in  README  aclocal.m4  configure  configure.ac
src/gstruct/config/: acx_mmap_fixed.m4  acx_mmap_variable.m4  ax_ext.m4
src/gstruct/lib/: gstruct.pc.in
src/gstruct/src/: Makefile.am  Makefile.in  access.c  access.h  add-exons-spliced.c  add-exons-unpaired.c  add-splice-prob.c  assert.c  assert.h  bam_fasta.c  bam_fastq.c  bam_get.c  bam_indelfix.c  bam_markdups.c  bam_merge.c  bam_pileup.c  bam_print.c  bam_splices.c  bamread.c  bamread.h  bamtally.c  bamtally.h  bamtally_main.c  bigendian.c  bigendian.h  bool.h  cappaths.c  cappaths.h  chrnum.c  chrnum.h  chrom.c  chrom.h  complement.h  config.h  config.h.in  datadir.c  datadir.h  dynprog.c  dynprog.h  dynprog_cigar.c  (+90 more)
tests/: gmapR_unit_tests.R
vignettes/: gmapR.Rnw
